--- a/angular-socket-io/package.json
+++ b/angular-socket-io/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codaffection-material-fire",
-  "version": "0.0.0",
+  "name": "angular-socket-io",
+  "version": "2.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,22 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.2.2",
-    "@angular/cdk": "^13.2.1",
+    "@angular/animations": "~13.2.2",
     "@angular/common": "~13.2.2",
     "@angular/compiler": "~13.2.2",
     "@angular/core": "~13.2.2",
-    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.2.2",
     "@angular/http": "~7.2.16",
-    "@angular/material": "^13.2.1",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@types/socket.io-client": "^1.4.36",
     "core-js": "^3.21.0",
-    "firebase": "^9.6.6",
-    "lodash": "^4.17.21",
     "rxjs": "~7.5.3",
+    "socket.io-client": "^4.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
